homeとnewsのみタスクを振った。残りの部分は少し大まかにタスクを作成。

--- a/style.scss
+++ b/style.scss
@@ -9,3 +9,7 @@
 @import 'main';
 @import 'homepage';
 @import 'newspage';
+@import 'servicepage';
+@import 'workspacepage';
+@import 'aboutpage';
+@import 'contactpage';
