--- a/_header.scss
+++ b/_header.scss
@@ -1,3 +1,22 @@
 header{
+    padding: 0 120px;
+    font-weight: bold;
+    background-color: white;
     // タスク２
+    .nav-center {
+        flex-grow: 1;
+        .nav-item {
+            &:hover {
+                border-bottom: solid $blue1;
+            }
+        }
+    }
+    .nav-item {
+        margin: 0 15px;
+    }
+    .nav-info-button {
+        box-shadow: 0px 0px 3px 1px grey;
+        border-radius: 50px;
+        padding: 0 1.5em;
+    }
 }
