--- a/home/_services.scss
+++ b/home/_services.scss
@@ -13,7 +13,8 @@
                 margin-right: 0;
                 position: absolute;
                 top: 0;
-                left: 25px;
+                left: 30px;
+                font-size: 32px;
             }
 
             p {
