--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ main {
   margin-right: 0;
   position: absolute;
   top: 0;
-  left: 25px;
+  left: 30px;
+  font-size: 32px;
 }
 
 .homepage .services .services-container .services-title p {
