--- a/home/_workspace.scss
+++ b/home/_workspace.scss
@@ -1,3 +1,92 @@
-.workspace{
-    // タスク５
+// 背景画像のパス
+$img-path: '../images/';
+
+// 奥側の背景画像設定用
+@mixin bg-img($value){
+    background-image: url('#{$img-path}#{$value}');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+//手前側の背景画像設定用
+@mixin bg-wrap($value){
+    width: 100%;
+    height: 100%;
+    background-color: $value;
+}
+//セクションコンテンツの高さ
+$sec5-contents-height: 800px;
+
+// アクセントカラー
+$accent-color: #2ca6e0;
+
+// ボタン
+@mixin button{
+    color: $accent-color;
+    background-color: #ffffff;
+    border-radius: 24px;
+    border: 2px solid $accent-color;
+    width: 100%;
+    max-width: 300px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+section.workspace{
+    height: $sec5-contents-height;
+    @include bg-img('home-bg03.jpg');
+    .wrap{
+        @include bg-wrap(#adb5bd);
+        .inner{
+            height: 100%;
+            color:#ffffff;
+            z-index: 1;
+            .workspace-title{
+                -ms-writing-mode: tb-rl;
+                writing-mode: vertical-lr;
+                margin-bottom: 150px;
+                h2{
+                    color: #333333;
+                    font-size: 2rem;
+                }
+                &::before{
+                    content: "Co-Working Space";
+                    display: inline-block;
+                    color: $accent-color;
+                    padding: 5px 0;
+                    transform: rotate(180deg);
+                    -ms-transform: rotate(180deg);
+                    -moz-transform: rotate(180deg);
+                    -webkit-transform: rotate(180deg);
+                    -o-transform: rotate(180deg);
+                    }
+                }
+                .workspace-text{
+                    color: #333333;
+                    font-size: 1.2rem;
+                    p{
+                        font-size: 16px;
+                        margin-bottom: 60px;
+                    }
+                    a.btn {
+                        @include button;
+                        img{
+                            margin-left: 30%;
+                        }
+                        &:hover{
+                            color: #ffffff;
+                            background-color: $accent-color;
+                        }
+                        &::after{
+                            content: url(#{$img-path}g821.png);
+                            display: inline-block;
+                            vertical-align: middle;
+                            -webkit-transform: scale(0.5);
+                            transform: scale(0.5);
+                            margin-left: 15%;
+                        }
+                    }
+                }
+            }
+        }
 }
