fontawesomeの読み込み

--- a/_footer.scss
+++ b/_footer.scss
@@ -22,5 +22,15 @@ footer{
                 color: #ffffff;
             }
         }
+        .footer-right-wrapper{
+            display: flex;
+            color: #ffffff;
+            p{
+                margin-right: 30px;
+            }
+        }
+        small{
+            color: #ffffff;
+        }
     }
 }
