--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ header .nav-info-button {
 }
 
 footer {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   line-height: 2;
   letter-spacing: 0.8px;
   background-color: grey;
@@ -144,17 +146,17 @@ footer p {
 }
 
 footer .footer-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 95px 130px;
+  padding: 0px 130px;
+  padding-top: 95px;
+  padding-bottom: 70px;
 }
 
 footer .footer-wrapper .footer-left-wrapper {
   font-size: 14px;
+  float: left;
 }
 
 footer .footer-wrapper .footer-left-wrapper .footer-logo {
@@ -168,16 +170,11 @@ footer .footer-wrapper .footer-left-wrapper .footer-info {
   font-family: 'Ubuntu', 'Noto Sans JP','NotoSansTC', 'PingFangSC', sans-serif;
 }
 
-footer .footer-wrapper .footer-left-wrapper small {
-  color: #ffffff;
-  padding-top: 70px;
-  display: inline-block;
-}
-
 footer .footer-wrapper .footer-right-wrapper {
   color: #ffffff;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  float: right;
 }
 
 footer .footer-wrapper .footer-right-wrapper i:hover {
@@ -188,6 +185,75 @@ footer .footer-wrapper .footer-right-wrapper i:hover {
 
 footer .footer-wrapper .footer-right-wrapper .facebook, footer .footer-wrapper .footer-right-wrapper .instagram {
   padding-right: 51px;
+}
+
+footer small {
+  color: #ffffff;
+  padding-left: 130px;
+  padding-top: 70px;
+  clear: both;
+  float: left;
+}
+
+@media screen and (max-width: 769px) {
+  footer {
+    height: 338px;
+  }
+  footer .footer-wrapper {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+    padding: 0 40px;
+    padding-top: 70px;
+  }
+  footer .footer-wrapper .footer-left-wrapper .footer-info {
+    white-space: nowrap;
+  }
+  footer .footer-wrapper .footer-right-wrapper .facebook {
+    padding-right: 35px;
+  }
+  footer .footer-wrapper .footer-right-wrapper .instagram {
+    padding-right: 35px;
+  }
+  footer small {
+    padding-left: 6%;
+    padding-top: 8%;
+    line-height: normal;
+  }
+}
+
+@media screen and (max-width: 321px) {
+  footer {
+    height: 400px;
+    width: 100%;
+  }
+  footer .footer-wrapper {
+    display: block;
+    padding: 0 14px;
+  }
+  footer .footer-wrapper .footer-left-wrapper {
+    padding-bottom: 60px;
+    padding-top: 80px;
+    float: none;
+  }
+  footer .footer-wrapper .footer-left-wrapper .footer-info {
+    margin: 0 auto;
+    padding-top: 18px;
+  }
+  footer .footer-wrapper .footer-right-wrapper {
+    text-align: center;
+    float: none;
+  }
+  footer .small {
+    margin: 0 auto;
+    width: 292px;
+  }
+  footer .small small {
+    padding-top: 18px;
+    padding-left: 0;
+    font-size: 12px;
+    line-height: normal;
+  }
 }
 
 main {
