pc、レスポンシブ対応完了

--- a/_homepage.scss
+++ b/_homepage.scss
@@ -1,7 +1,7 @@
 .homepage{
     @import 'home/top_about';
     @import 'home/services';
-    @import 'home/workspace';
+    // @import 'home/workspace';
     @import 'home/events';
     @import 'home/news';
     @import 'home/contact';
